refactor: Update AddressTableLookup and related classes
- Modify AddressTableLookup to use Moshi annotations for JSON parsing
- Implement serialization methods in AddressTableLookup
- Update AddressLookupTableProgram to use new AccountMeta creation pattern
- Add unit tests for AddressLookupTableProgram instructions
- Implement V0 transaction support in TransactionTest

This commit improves JSON parsing, adds serialization capabilities, and
ensures compatibility with the latest AccountMeta implementation. It also
adds comprehensive tests for Address Lookup Table operations and V0
transactions.